Disabled `Show Category Texts` option in control panel

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -163,36 +163,35 @@
             </div>
 
 
-            <!-- MUST TODO: (POST-MEETING)-->
-            <!--Show Category Texts Checkbox-->
-            <div class="preference-control ui checkbox">
-                <input type="checkbox" name="example" id="show-category-texts-checkbox" onclick="toggleCategoryTexts()">
-                <label>Hide category texts</label>
+<!--            &lt;!&ndash;Show Category Texts Checkbox&ndash;&gt;-->
+<!--            <div class="preference-control ui checkbox">-->
+<!--                <input type="checkbox" name="example" id="show-category-texts-checkbox" onclick="toggleCategoryTexts()">-->
+<!--                <label>Hide category texts</label>-->
 
 
-                <script>
+<!--                <script>-->
 
-                    function toggleCategoryTexts() {
+<!--                    function toggleCategoryTexts() {-->
 
-                        // Get the checkbox element
-                        const checkBox1 = document.getElementById("show-category-texts-checkbox")
+<!--                        // Get the checkbox element-->
+<!--                        const checkBox1 = document.getElementById("show-category-texts-checkbox")-->
 
-                        allNavigators.forEach( navigator => {
+<!--                        allNavigators.forEach( navigator => {-->
 
-                            if (checkBox1.checked === true ){
-                                navigator.showCategoryCaptions = true
-                            } else {
-                                navigator.showCategoryCaptions = false
-                            }
+<!--                            if (checkBox1.checked === true ){-->
+<!--                                navigator.showCategoryCaptions = true-->
+<!--                            } else {-->
+<!--                                navigator.showCategoryCaptions = false-->
+<!--                            }-->
 
-                            navigator.update()
-                        })
+<!--                            navigator.update()-->
+<!--                        })-->
 
 
-                    }
-                </script>
+<!--                    }-->
+<!--                </script>-->
 
-            </div>
+<!--            </div>-->
 
 
             <!--Color Scheme Dropdown-->
