Added navigator B3 in to control panel's target list

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -408,7 +408,8 @@
             // navigator6,
             navigatorB1,
             // navigatorB2,
-            navigatorB2
+            navigatorB2,
+            navigatorB3
         ]
 
         const darkenFilter =  document.createElement("DEFS");
