Fixed: Typo in control panel text

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -101,7 +101,7 @@
             <!-- Panel Width Slider -->
             <div id="panel-width-control" class="preference-control">
 
-                <p>Panel width: <span id="panel-width-text">100px</span>px</p>
+                <p>Panel width: <span id="panel-width-text">100px</span></p>
 
                 <input type="range"
                        class="slider"
