--- a/CPC/index.html
+++ b/CPC/index.html
@@ -410,7 +410,7 @@
                             allNavigators.forEach( (navigatorObject, navigatorName) => {
 
                                 navigatorObject
-                                    .strokeColor(`${selectedValue}`)
+                                    .stroke(`${selectedValue}`)
                                     .update()
 
                             })
