--- a/CPC/single.html
+++ b/CPC/single.html
@@ -18,7 +18,7 @@
     <link rel="stylesheet" type="text/css" href="libraries/external/semantic/dist/semantic.min.css">
     <script src="libraries/external/jquery-3.1.1.min.js"></script>
     <script src="libraries/external/semantic/dist/semantic.min.js"></script>
-    
+
 
     <!--     VUE     -->
     <!-- Vue development version, includes helpful console warnings -->
@@ -456,19 +456,19 @@
             // navigatorB3
         ]
 
-        const darkenFilter =  document.createElement("DEFS");
-        darkenFilter.innerHTML = (`\
- <filter id="darken">
-      <feColorMatrix
-          type='matrix'
-          values=".5   0   0   0   0
-                 0  .5   0   0   0
-                 0   0  .5   0   0
-                 0   0   0   1   0 "
-         />
-</filter>`)
-        const svg = document.querySelector('SVG')
-        svg.appendChild(darkenFilter)
+//         const darkenFilter =  document.createElement("DEFS");
+//         darkenFilter.innerHTML = (`\
+//  <filter id="darken">
+//       <feColorMatrix
+//           type='matrix'
+//           values=".5   0   0   0   0
+//                  0  .5   0   0   0
+//                  0   0  .5   0   0
+//                  0   0   0   1   0 "
+//          />
+// </filter>`)
+//         const svg = document.querySelector('SVG')
+//         svg.appendChild(darkenFilter)
 
 
     </script>
