Improved: Sever root directory changed for compatibility with 'GitHub Pages' - Dependency references now start from one directory above (`/` became `/CPC/`)

--- a/CPC/index.html
+++ b/CPC/index.html
@@ -8,17 +8,21 @@
     <!--======================== EXTERNAL MODULES ========================-->
 
     <!--    D3     -->
-    <script type="text/javascript" src="./libraries/external/d3/d3.js"></script>
-    <script type="text/javascript" src="./libraries/external/d3/d3-array.js"></script>
+    <script type="text/javascript" src="/CPC/libraries/external/d3/d3.js"></script>
+    <script type="text/javascript" src="/CPC/libraries/external/d3/d3-array.js"></script>
 
     <!--    Lodash     -->
-    <script type="text/javascript" src="./libraries/external/lodash.js"></script>
+    <script type="text/javascript" src="/CPC/libraries/external/lodash.js"></script>
 
     <!--    Semantic UI     -->
-    <script src="libraries/external/jquery-3.1.1.min.js"></script>
-    <link rel="stylesheet" type="text/css" href="libraries/external/semantic/dist/semantic.min.css">
-    <script src="libraries/external/semantic/dist/semantic.min.js"></script>
+<!--    <script src="libraries/external/jquery-3.1.1.min.js"></script>-->
+<!--    <link rel="stylesheet" type="text/css" href="libraries/external/semantic/dist/semantic.min.css">-->
+<!--    <script src="libraries/external/semantic/dist/semantic.min.js"></script>-->
 
+<!--    Semantic UI     -->
+        <script src="/CPC/libraries/external/jquery-3.1.1.min.js"></script>
+<!--    <link rel="stylesheet" type="text/css" href="libraries/external/semantic/dist/semantic.min.css">-->
+<!--    <script src="libraries/external/semantic/dist/semantic.min.js"></script>-->
 
 
     <!--    Fomantic UI-->
@@ -38,27 +42,27 @@
 
 
     <!--======================== INTERNAL STYLE SHEET ======================-->
-    <link rel="stylesheet" type="text/css" href="app.css">
+    <link rel="stylesheet" type="text/css" href="/CPC/app.css">
 
 
     <!--========================== INTERNAL MODULES ========================-->
     <script type="text/javascript" src="./data/datasets.js"></script>
 
-    <script type="text/javascript" src="libraries/utils/arrayUtils.js"></script>
-    <script type="text/javascript" src="libraries/utils/classUtils.js"></script>
-    <script type="text/javascript" src="libraries/utils/errorUtils.js"></script>
-    <script type="text/javascript" src="libraries/utils/domUtils.js"></script>
-    <script type="text/javascript" src="libraries/utils/jsUtils.js"></script>
-    <script type="text/javascript" src="libraries/utils/stringUtils.js"></script>
-    <script type="text/javascript" src="libraries/utils/mapUtils.js"></script>
-    <script type="text/javascript" src="libraries/utils/statsUtils.js"></script>
-    <script type="text/javascript" src="libraries/cpc/survey-data.js"></script>
-    <script type="text/javascript" src="./libraries/cpc/data.js"></script>
-    <script type="text/javascript" src="./libraries/cpc/dataset.js"></script>
-    <script type="text/javascript" src="libraries/cpc/container.js"></script>
-    <script type="text/javascript" src="./libraries/cpc/shape.js"></script>
-    <script type="text/javascript" src="./libraries/cpc/navigator.js"></script>
-    <script type="text/javascript" src="./libraries/cpc/controls.js"></script>
+    <script type="text/javascript" src="/CPC/libraries/utils/arrayUtils.js"></script>
+    <script type="text/javascript" src="/CPC/libraries/utils/classUtils.js"></script>
+    <script type="text/javascript" src="/CPC/libraries/utils/errorUtils.js"></script>
+    <script type="text/javascript" src="/CPC/libraries/utils/domUtils.js"></script>
+    <script type="text/javascript" src="/CPC/libraries/utils/jsUtils.js"></script>
+    <script type="text/javascript" src="/CPC/libraries/utils/stringUtils.js"></script>
+    <script type="text/javascript" src="/CPC/libraries/utils/mapUtils.js"></script>
+    <script type="text/javascript" src="/CPC/libraries/utils/statsUtils.js"></script>
+    <script type="text/javascript" src="/CPC/libraries/cpc/survey-data.js"></script>
+    <script type="text/javascript" src="/CPC/libraries/cpc/data.js"></script>
+    <script type="text/javascript" src="/CPC/libraries/cpc/dataset.js"></script>
+    <script type="text/javascript" src="/CPC/libraries/cpc/container.js"></script>
+    <script type="text/javascript" src="/CPC/libraries/cpc/shape.js"></script>
+    <script type="text/javascript" src="/CPC/libraries/cpc/navigator.js"></script>
+    <script type="text/javascript" src="/CPC/libraries/cpc/controls.js"></script>
 
 
 
@@ -140,7 +144,7 @@
                     const switchDataset = (name) => ({
 
                         'Titanic': {
-                            path: 'http://localhost:3000/data/titanic.csv',
+                            path: 'http://localhost:3000/CPC/data/titanic.csv',
                             columnsToOmit: [ 'NAME' ],
                             height: 750,
                             bgTitle: 'TITANIC DATASET'
@@ -148,13 +152,13 @@
                         },
 
                         'Titanic - Embark (Partial)': {
-                            path: 'http://localhost:3000/data/titanic-embark-partial.csv',
+                            path: 'http://localhost:3000/CPC/data/titanic-embark-partial.csv',
                             height: 750,
                             bgTitle: 'TITANIC DATASET'
                         },
 
                         'Titanic - Prediction Sample': {
-                            path: 'http://localhost:3000/data/titanicTinyWithMockPredictions.csv',
+                            path: 'http://localhost:3000/CPC/data/titanicTinyWithMockPredictions.csv',
                             columnsToOmit: ['Name', 'Ticket'],
                             columnsToForceAsCategorical: [],
                             height: 750,
@@ -162,7 +166,7 @@
                         },
 
                         'COVID-19': {
-                            path: 'http://localhost:3000/data/covid19/Covid19Geographic-7Countries.csv',
+                            path: 'http://localhost:3000/CPC/data/covid19/Covid19Geographic-7Countries.csv',
                             columnsToOmit: ['dateRep', 'day', 'year', 'geoId', 'countryterritoryCode', 'popData2018'],
                             columnsToForceAsCategorical: ['month'],
                             height: 750,
@@ -170,7 +174,7 @@
                         },
 
                         'Wine': {
-                            path: 'http://localhost:3000/data/Wine/Wine-FiveColumns.csv',
+                            path: 'http://localhost:3000/CPC/data/Wine/Wine-FiveColumns.csv',
                             columnsToOmit: [],
                             columnsToForceAsCategorical: [],
                             height: 750,
@@ -178,7 +182,7 @@
                         },
 
                         'Big Five (2 dimensions, generated)': {
-                            path: 'http://localhost:3000/data/SampleMixedData.csv',
+                            path: 'http://localhost:3000/CPC/data/SampleMixedData.csv',
                             columnsToOmit: [],
                             columnsToForceAsCategorical: [],
                             height: 750,
@@ -186,7 +190,7 @@
                         },
 
                         'Mushrooms (4 columns)': {
-                            path: 'http://localhost:3000/data/mushrooms/mushrooms-4columns.csv',
+                            path: 'http://localhost:3000/CPC/data/mushrooms/mushrooms-4columns.csv',
                             columnsToOmit: [],
                             columnsToForceAsCategorical: [],
                             height: 850,
@@ -194,7 +198,7 @@
                         },
 
                         'Mushrooms (8 columns)': {
-                            path: 'http://localhost:3000/data/mushrooms/mushrooms-8columns.csv',
+                            path: 'http://localhost:3000/CPC/data/mushrooms/mushrooms-8columns.csv',
                             columnsToOmit: [],
                             columnsToForceAsCategorical: [],
                             height: 1400,
